Corrige caminhos das imagens para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
           que ainda está por vir!
         </p>
       </div>
-      <img src="img/Imagem do WhatsApp de 2025-08-26 à(s) 00.29.25_8548ece3.jpg" alt="Foto De Rodrigo Souza" class="foto" />
+      <img src="img/rodrigo-foto.jpg" alt="Foto De Rodrigo Souza" class="foto" />
     </section>
 
     <section id="meus-projetos">
       <h2 >Meus Projetos</h2>
       <div class="projetos">
        <div class="card">
-        <img src="/img/amigo-secreto.png" alt="amigo-secreto">
+        <img src="img/amigo-secreto.png" alt="amigo-secreto">
       <h3>Amigo Secreto</h3>
       <p>Aplicativo para sorteio de amigo secreto entre participantes.</p>
       <a href="https://rodrigo0e.github.io/amigoSecreto/" target="_blank">Ver Projeto</a>
     </div>
 
     <div class="card">
-      <img src="/img/portfolio.png" alt="Portfólio">
+      <img src="img/portfolio.png" alt="Portfólio">
       <h3>Portfólio</h3>
       <p>Meu portfólio pessoal.</p>
       <a href="https://rodrigo0e.github.io/portifolio/" target="_blank">Ver Projeto</a>
     </div>
 
     <div class="card">
-      <img src="/img/jogo-do-numero-secreto.png" alt="Número-Secreto">
+      <img src="img/jogo-do-numero-secreto.png" alt="Número-Secreto">
       <h3>Jogo do Número Secreto</h3>
       <p>Jogo interativo onde você tenta adivinhar um número aleatório.</p>
       <a href="https://rodrigo0e.github.io/Jogo-Do-N-mero-Secreto/" target="_blank">Ver Projeto</a>
